#头文件目录
INCLUDE_DIRECTORIES( ${JSONCPP_INCLUDE} ${TINYXML_INCLUDE} ${MYSQL_INCLUDE} ${HIREDIS_INCLUDE} ${LOG4CPP_INCLUDE} ${POCO_INCLUDE} ${FASTCGI_INCLUDE} 
${STIBEL_COMMON_INCLUDE} ${STIBEL_MYSQL_INCLUDE} ${STIBEL_LOG_INCLUDE} ${STIBEL_JSON_INCLUDE} ${STIBEL_REDIS_INCLUDE} ./include )

#目录源码路径
SET( FASTCGIAPP_SRC_DIR ./source )

#代码列表
FILE (GLOB FASTCGIAPP_FILES ${FASTCGIAPP_SRC_DIR}/*.cpp )

#依赖的LIB
SET(FASTCGIAPP_LIB  ${LIB_JSONCPP} ${LIB_TINYXML}  ${LIB_MYSQL} ${LIB_HIREDIS} ${LIB_LOG4CPP} ${LIB_POCO} ${LIB_FASTCGI} ${LIB_PTHREAD} ${LIB_STIBEL_COMMON} 
${LIB_STIBEL_MYSQL} ${LIB_STIBEL_LOG} ${LIB_STIBEL_JSON} ${LIB_STIBEL_REDIS})

#生成 
ADD_EXECUTABLE( fastcgiApp ${FASTCGIAPP_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( fastcgiApp ${FASTCGIAPP_LIB})