#头文件目录
INCLUDE_DIRECTORIES( ${STIBEL_COMMON_INCLUDE} ${JSONCPP_INCLUDE} ./include )

#目录源码路径
SET( RESTFULAPP_SRC_DIR ./source )

#代码列表
FILE (GLOB RESTFULAPP_FILES ${RESTFULAPP_SRC_DIR}/*.cpp)

#依赖的LIB
SET(RESTFULAPP_LIB  ${LIB_PTHREAD} ${LIB_STIBEL_COMMON} ${LIB_JSONCPP})

#生成 
ADD_EXECUTABLE( restfulApp ${RESTFULAPP_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( restfulApp ${RESTFULAPP_LIB})

