#头文件目录
INCLUDE_DIRECTORIES( ${STIBEL_COMMON_INCLUDE} ${JSONCPP_INCLUDE} ${STIBEL_JSON_INCLUDE} ${STIBEL_MYSQL_INCLUDE} ${ZEROMQ_INCLUDE} ${STIBEL_LOG_INCLUDE} ${LOG4CPP_INCLUDE} ./include )

#目录源码路径
SET( WEBSERVER_SRC_DIR ./source )

#代码列表
FILE (GLOB WEBSERVER_FILES ${WEBSERVER_SRC_DIR}/*.cpp)

#依赖的LIB
SET(WEBSERVER_LIB  ${LIB_PTHREAD} ${LIB_STIBEL_COMMON} ${LIB_JSONCPP} ${LIB_STIBEL_MYSQL} ${LIB_STIBEL_JSON} ${LIB_STIBEL_LOG} ${LIB_STIBEL_COMMON} ${LIB_ZEROMQ})

#生成 
ADD_EXECUTABLE( webServerTest ${WEBSERVER_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( webServerTest ${WEBSERVER_LIB})

#生成 
ADD_EXECUTABLE( req_rrbrokerTest ./req/rrbroker.cpp)

#连接生成相关库
TARGET_LINK_LIBRARIES( req_rrbrokerTest ${WEBSERVER_LIB} )

#生成 
ADD_EXECUTABLE( req_rrserverTest ./req/rrserver.cpp)

#连接生成相关库
TARGET_LINK_LIBRARIES( req_rrserverTest ${WEBSERVER_LIB} )

